# Granddyser--wan-video-extender

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  wan_video_extender.py  wan_video_extender_low_high.py
example_workflows/: wan-video-extender-L-H.json  wan-video-extender.json
