[project]
name = "wan-video-extender"
description = "Wan Video Extender extends a short video or a single image into a longer, temporally consistent clip using a VACE based control latent. It runs in multiple extension loops. Each loop can have its own prompt and optional LoRA, so you can evolve the scene step by step without rebuilding the graph."
version = "1.2.1"
license = {file = "LICENSE"}
dependencies = [
		"ftfy",
		"accelerate>=1.2.1",
		"einops",
		"diffusers>=0.33.0",
		"peft>=0.17.0",
		"sentencepiece>=0.2.0",
		"protobuf",
		"pyloudnorm",
		"gguf>=0.17.1",
		"opencv-python",
		"scipy",
	       ]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/Granddyser/wan-video-extender"
"Bug Tracker" = "https://github.com/Granddyser/wan-video-extender/issues"

[tool.comfy]
PublisherId = "granddyser"
DisplayName = "Wan-video-extender"
requires-comfyui = ">=1.0.0"
